[gd_scene load_steps=7 format=3 uid="uid://dgukm0kqjet4v"]

[ext_resource type="Theme" uid="uid://bdm7j71m6my6r" path="res://gui/ui_theme.tres" id="1_jmk41"]
[ext_resource type="Script" path="res://gui/clear_panel.gd" id="2_pg6a2"]
[ext_resource type="Script" path="res://gui/transition_button.gd" id="3_l6wje"]

[sub_resource type="Animation" id="Animation_xpdpk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [20.0]
}

[sub_resource type="Animation" id="Animation_tghi7"]
resource_name = "fade_in "
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [20.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iinqh"]
_data = {
"RESET": SubResource("Animation_xpdpk"),
"fade_in ": SubResource("Animation_tghi7")
}

[node name="ClearPanel" type="PanelContainer"]
offset_right = 231.0
offset_bottom = 256.0
theme = ExtResource("1_jmk41")
script = ExtResource("2_pg6a2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "cleared"
horizontal_alignment = 1
uppercase = true

[node name="Time" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/Time"]
layout_mode = 2
text = "TIME:"

[node name="TimeValue" type="Label" parent="MarginContainer/VBoxContainer/Time"]
unique_name_in_owner = true
layout_mode = 2

[node name="TimeFadeInLine" type="Line2D" parent="MarginContainer/VBoxContainer/Time"]
position = Vector2(0, -7)
points = PackedVector2Array(-288, 16, 624, 16)
width = 20.0

[node name="TimeFadeIn" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/Time/TimeFadeInLine"]
unique_name_in_owner = true
autoplay = "fade_in "
libraries = {
"": SubResource("AnimationLibrary_iinqh")
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Rank" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "RANK: "

[node name="Ranks" type="HFlowContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/v_separation = 0

[node name="Next" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "NEXT >"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "< MENU"
script = ExtResource("3_l6wje")
scene_path = "res://gui/level_select/level_select.tscn"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
